Panel y nuevos idiomas

--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -22,10 +22,12 @@
             <div class="relative flex h-16 flex-0 flex-auto items-center justify-center px-4 md:px-6">
                 <!-- @if (!isScreenSmall) { -->
                 <img class="w-56 h-15 p-1" src="assets/images/logos/trotapie.png" alt="Logo Trotapie" (click)="regresarInicio()" />
+                <languages></languages>
             </div>
             <!-- Bottom bar -->
         </div>
     </div>
+
 
     <!-- Content -->
     <div class="flex w-full flex-auto justify-center sm:px-8">
