--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -19,10 +19,22 @@
     <div class="relative z-49 flex w-full justify-center overflow-hidden bg-primary-700 print:hidden">
         <div
             class="bg-card w-full max-w-360 overflow-hidden border-b sm:m-8 sm:mb-0 sm:rounded-t-xl sm:py-3 sm:shadow-2xl md:mx-8 md:mt-12 md:pb-3 md:pt-4">
-            <div class="relative flex h-16 flex-0 flex-auto items-center justify-center px-4 md:px-6">
+            <div class="grid-cols-2 relative flex h-16 flex-0 flex-auto items-center px-4 md:px-6">
                 <!-- @if (!isScreenSmall) { -->
-                <img class="w-56 h-15 p-1" src="assets/images/logos/trotapie.png" alt="Logo Trotapie" (click)="regresarInicio()" />
-                <languages></languages>
+                <div class="flex items-center">
+                    <img src="assets/images/logos/trotapie.png" alt="Logo Trotapie" (click)="regresarInicio()"
+                        class="h-auto w-32 sm:w-40 md:w-48 lg:w-56 p-1 cursor-pointer" />
+                    <languages></languages>
+                </div>
+    <ng-container *transloco="let t">
+        <button mat-flat-button class=" ml-auto mr-2 flex items-center justify-end gap-2"
+            (click)="regresarInicio()">
+            <mat-icon class="icon-size-5" [svgIcon]="'heroicons_outline:home'"></mat-icon>{{ t('inicio') }}
+        </button>
+    </ng-container>
+
+
+
             </div>
             <!-- Bottom bar -->
         </div>
