Update hotel detail display to show description

--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -85,7 +85,7 @@
                             <li *ngFor="let punto of descripcionLista" class="flex gap-2">
                                 <mat-icon class="icon-size-5 text-green-600"
                                     [svgIcon]="'heroicons_outline:check-badge'"></mat-icon>
-                                <span>{{ punto }}</span>
+                                <span>{{  punto.descripcion }}</span>
                             </li>
                         </ul>
                         <div class="mt-5">
