--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -706,8 +706,8 @@
                                         class="block text-sm font-medium text-green-700 mb-1">{{t('regimen')}}</label>
                                     <select formControlName="regimen" class="select-underline">
                                         <option [ngValue]="null" disabled>{{t('selecciona-opcion')}}</option>
-                                        <option *ngFor="let op of opcionesRegimen" [ngValue]="op.regimen.descripcion">{{
-                                            op.regimen.descripcion }}</option>
+                                        <option *ngFor="let op of opcionesRegimen" [ngValue]="op.descripcion">{{
+                                            op.descripcion }}</option>
                                     </select>
 
                                     <p *ngIf="reservacionForm.get('regimen')?.invalid && (reservacionForm.get('regimen')?.touched || reservacionForm.get('regimen')?.dirty)"
