--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -213,11 +213,28 @@
                                 <mat-icon class="icon-size-5 text-black"
                                     [svgIcon]="'heroicons_outline:arrow-right'"></mat-icon>
                             </button>
-                            <button mat-flat-button class="absolute top-3 right-3 md:top-6 md:right-6
-                       rounded-full bg-white/20 hover:bg-white/30 text-white backdrop-blur
-                       focus:outline-none" (click)="close()">
-                                <mat-icon class="icon-size-5" [svgIcon]="'heroicons_outline:x-mark'"></mat-icon>
-                            </button>
+                            <!-- Controles superiores -->
+                            <div class="absolute top-3 right-3 md:top-6 md:right-6 flex items-center gap-2 z-20">
+
+                                <!-- BOTÓN COTIZAR -->
+                                <button mat-flat-button class="rounded-full px-4 py-2 gap-1
+              bg-[#F9B44B]  hover:bg-[#e0a13a]
+               text-white backdrop-blur shadow-md
+               transition" (click)="abrirModal()">
+                                    <mat-icon svgIcon="mat_outline:request_quote"
+                                        class="mr-1 text-green-800"></mat-icon>
+                                    {{t('cotizar')}}
+                                </button>
+
+                                <!-- BOTÓN CERRAR -->
+                                <button mat-flat-button class="rounded-full bg-white/20 hover:bg-white/30
+               text-white backdrop-blur
+               focus:outline-none" (click)="close()">
+                                    <mat-icon class="icon-size-5" [svgIcon]="'heroicons_outline:x-mark'">
+                                    </mat-icon>
+                                </button>
+
+                            </div>
 
                         </div>
                         <div class="absolute bottom-3 md:bottom-6 left-1/2 -translate-x-1/2
