Texto de ver mas

--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -174,7 +174,7 @@
 
                                 <div class="absolute inset-0 bg-black/50"></div>
                                 <span class="relative z-10 text-white text-lg font-semibold">
-                                    Ver más
+                                    {{ t('ver-mas') }}
                                 </span>
                             </button>
 
