Ver galeria sin salto

--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -271,7 +271,7 @@
 
                                         <div class="absolute bottom-4 right-2 z-20 flex items-center gap-2">
                                             <div class="text-sm text-right leading-tight"
-                                                [innerHTML]="t('ver-galeria')">
+                                                [innerHTML]="t('ver-galeria-salto')">
                                             </div>
 
                                             <div
@@ -383,7 +383,7 @@
 
                                             <div class="absolute bottom-4 right-2 z-20 flex items-center gap-2">
                                                 <div class="text-sm text-right leading-tight"
-                                                    [innerHTML]="t('ver-galeria')">
+                                                    [innerHTML]="t('ver-galeria-salto')">
                                                 </div>
 
                                                 <div
